deleted some TODO comments from HttpClientAdaptor class